# test_rishut

./: .env.pub  README.md  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  ТЗ.md
apps/orders/: routers.py
apps/orders/admin/: __init__.py  item.py
apps/orders/models/: order.py
apps/orders/models/managers/: order.py
apps/orders/models/querysets/: order.py
apps/orders/serializers/: __init__.py  order.py
apps/orders/viewsets/: __init__.py  item.py  order.py
config/: api_urls.py
config/migrations/orders/: 0001_initial.py  0002_order.py
config/settings/: __init__.py  installed_apps.py  settings.py
nginx/: Dockerfile  nginx.conf
payments/: __init__.py  stripe.py
server/: .env.pub  .flake8  Dockerfile  entrypoint.sh  pyproject.toml
server/apps/orders/: routers.py
server/apps/orders/admin/: __init__.py  discount.py  item.py  order.py  tax.py
server/apps/orders/models/: __init__.py  discount.py  item.py  order.py  tax.py
server/apps/orders/models/managers/: __init__.py
server/apps/orders/models/querysets/: __init__.py
server/apps/orders/serializers/: __init__.py  discount.py  item.py  order.py  tax.py
server/apps/orders/viewsets/: __init__.py  item.py  order.py
server/config/: api_urls.py  asgi.py
server/config/migrations/orders/: 0003_discount_tax_order_discount_order_tax.py
server/config/settings/: logging.py  settings.py
server/payments/: stripe.py
server/templates/: payment_item.html  payment_order.html
templates/: payment_order.html  payments.html
